# cutie

./: .editorconfig  .gitignore  .tokeignore  Cargo.toml  LICENSE  README.md  build-all.sh  build.rs  compile.sh  main.c
.dev/: install-deps.sh  logging.sh  test-logging.sh
.zed/: settings.json
src/: args.rs  lib.rs  main.rs  print.rs
src/lib/: colors.rs  prefixes.rs
src/lib/colors/: conv.rs  rgb.rs
src/lib/colors/ansi/: ansi16.rs  ansi24bit.rs  ansi256.rs
src/lib/prefixes/: ansi16.rs  ansi24bit.rs  ansi256.rs
src/lib/tty/: tput.rs
